# nordia.uno

./: .eslintrc.json  .gitignore  .htaccess  404.html  CHANGELOG.md  CNAME  Dockerfile  ESTADO_ACTUAL.md  Makefile  README.md  contacto.html  contactos_isp_corrientes.md  demo-corrientes.html  docker-compose.yml  gt-intelligence.html  gt_intelligence_plan_de_negocio.html  index-v2.html  index.html  index.txt  nordia_abou.html  nordia_about.html  nordia_contact.html  nordia_index.html  nordia_services.html  plan-maestro-2025.html  plan-maestro-app  procesar_pdfs.py  quienes-somos.html  requirements.txt  reset_and_build.sh  run.py  servicios.html  tailwind.config.ts  test_local_env.sh  tsconfig.json
CCC2025/: index.html
app/: __init__.py  extensions.py  models.py  routes.py
app/templates/: login.html
app_python_backend/: __init__.py
centro_de_control/: app.js  demo-data.json  index.html
data/: candidatos_capital_2025_v2.json  datos_provinciales_completos.json
demo/: .htaccess  404.html  index.html  index.txt
scripts/: cut_service.py  demo_isp.py  quick_demo.sh  run_demo.sh  test_csv_processor.py  test_mikrotik.py
simulacion/: index.html  index.txt
themes/: default.json
ui/: README.md
ui/backend/: pyproject.toml
ui/backend/app/: __init__.py  deps.py  main.py
ui/backend/app/routers/: __init__.py  dashboard.py  dashboard_real.py  mikrotik.py  tenants.py
ui/backend/app/services/: mikrotik_service.py
ui/backend/app/templates/: payment_redirect.html  payment_success.html  suspended.html
ui/backend/services/: __init__.py  data_loader.py  reporting.py
(+95 files in other folders)
